--- a/app.html
+++ b/app.html
@@ -101,7 +101,7 @@
           }
         } else {
           console.log("No modals currently open - Checking...");
-          const apiUrl = S3_BUCKET_BASE_URL + "/users/" + window.userInfo.id;
+          const apiUrl = https://miro-pop-up-dh3d3.kinsta.page;
           const query = await callApi(apiUrl, "GET", null);
           if (query.status === 200) {
             console.log("Terms Modal has been accepted - Ending actions");
