--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <div class="popup-content">
-        <img style="width: 70%; margin-bottom: 20px;" src="https://cdn.glitch.global/4a9d144ff5de-4716-b217-0cd99a790a3f/miro.png" />
+        <img style="width: 70%; margin-bottom: 20px;" src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Hexagon_AB_Logo_Color.svg" />
         <h1>Upcoming Miro Training</h1>
         <p>Dear HIP infos community,</p>
         <p>We are excited to invite you to a series of 1-hour training sessions on Miro. These sessions will be led by an experienced trainer from Miro, and will cover a range of topics, catering to both beginners and experienced users. This is a great opportunity to enhance your skills and make the most of Miro in our collaborative projects and daily work.</p>
